[gd_scene load_steps=5 format=3 uid="uid://bt1h4jx1kt1bb"]

[ext_resource type="Script" path="res://menu.gd" id="1_a55bt"]
[ext_resource type="PackedScene" uid="uid://dkb7gt0bp1hxn" path="res://background.tscn" id="2_fd8c4"]
[ext_resource type="Texture2D" uid="uid://uq12bryrff0c" path="res://icon.svg" id="3_rlotf"]
[ext_resource type="Texture2D" uid="uid://cnl7e83rsujvh" path="res://Pacman1.jpg" id="4_akawi"]

[node name="Menu" type="Node"]
script = ExtResource("1_a55bt")

[node name="Background" parent="." instance=ExtResource("2_fd8c4")]

[node name="PLAY" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.371528
anchor_top = 0.583333
anchor_right = 0.635
anchor_bottom = 0.853
offset_right = -0.520081
offset_bottom = 0.255981
text = "PLAY"
metadata/_edit_use_anchors_ = true

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 201.0
offset_top = 361.0
offset_right = 377.0
offset_bottom = 513.0
texture_normal = ExtResource("3_rlotf")
texture_hover = ExtResource("4_akawi")
stretch_mode = 0

[node name="QUIT" type="Button" parent="."]
anchors_preset = -1
anchor_right = 0.139
anchor_bottom = 0.171
offset_left = 192.0
offset_top = 447.0
offset_right = 222.872
offset_bottom = 433.192
text = "QUIT"

[node name="PHYSICS" type="Button" parent="."]
offset_left = 768.0
offset_top = 454.0
offset_right = 984.0
offset_bottom = 553.0
text = "PHYSICS"

[connection signal="pressed" from="PLAY" to="." method="reset"]
[connection signal="pressed" from="PLAY" to="." method="empezarJuego"]
[connection signal="pressed" from="QUIT" to="." method="cerrarJuego"]
[connection signal="pressed" from="PHYSICS" to="." method="empezarFisicas"]
